--- a/app/src/main/res/layout/activity_settings_detail.xml
+++ b/app/src/main/res/layout/activity_settings_detail.xml
@@ -48,6 +48,38 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <View
+                    android:id="@+id/settings_detail_shader_tl"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/round_shader_r24_tl_48"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/settings_detail_shader_tr"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/round_shader_r24_tr_48"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/settings_detail_shader_bl"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/round_shader_r24_bl_48"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <View
+                    android:id="@+id/settings_detail_shader_br"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/round_shader_r24_br_48"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
