--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -30,7 +30,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/baseline_style_24" />
+                app:srcCompat="@drawable/baseline_settings_brightness_24" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/settings_frag_appearance_text_container"
@@ -45,7 +45,7 @@
                     android:id="@+id/settings_frag_appearance_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/menu_appearance"
+                    android:text="@string/menu_brightness"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_appearance_description"
@@ -57,8 +57,8 @@
                     android:id="@+id/settings_frag_appearance_description"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/desc_appearance"
-                    android:textSize="16sp"
+                    android:text="@string/desc_brightness"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +108,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/desc_performance"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +158,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/desc_sensitivity"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -208,7 +208,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/desc_timeout"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -258,7 +258,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/desc_night"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
