--- a/app/src/main/res/layout/fragment_settings_sensitivity_main.xml
+++ b/app/src/main/res/layout/fragment_settings_sensitivity_main.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/settings_sensitivity_main_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
-        android:layout_width="0dp"
+        android:id="@+id/settings_sensitivity_main_tab_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -16,10 +18,22 @@
         app:tabSelectedTextColor="@color/white">
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/settings_sensitivity_main_tab_pulldown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Pull down refresh" />
 
     </com.google.android.material.tabs.TabLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:id="@+id/settings_sensitivity_main_scroll_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/settings_sensitivity_main_scroll_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"></LinearLayout>
+    </ScrollView>
+</LinearLayout>
