--- a/app/src/main/res/layout/fragment_settings_brightness_card.xml
+++ b/app/src/main/res/layout/fragment_settings_brightness_card.xml
@@ -33,6 +33,10 @@
         android:id="@+id/settings_brightness_ambient_card_title"
         android:layout_width="0dp"
         android:layout_height="48dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginLeft="48dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
         android:gravity="center"
         android:text="@string/menu_brightness"
         android:textColor="@color/white"
