--- a/app/src/main/res/layout/fragment_settings_sensitivity_card.xml
+++ b/app/src/main/res/layout/fragment_settings_sensitivity_card.xml
@@ -19,6 +19,10 @@
             android:id="@+id/settings_sensitivity_card_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginEnd="48dp"
+            android:layout_marginRight="48dp"
             android:text="@string/menu_sensitivity"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
