--- a/app/src/main/res/layout/fragment_settings_night_card.xml
+++ b/app/src/main/res/layout/fragment_settings_night_card.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView222"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="night card"
+        android:text="night main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
