--- a/app/src/main/res/layout/fragment_settings_night_main.xml
+++ b/app/src/main/res/layout/fragment_settings_night_main.xml
@@ -50,7 +50,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="12dp"
                         android:layout_marginRight="12dp"
-                        android:text="0 %"
+                        android:text="0 lx"
                         android:textSize="20sp"
                         app:layout_constraintBottom_toTopOf="@+id/settings_night_main_enable_brightness_seekbar"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +118,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="12dp"
                         android:layout_marginRight="12dp"
-                        android:text="0 %"
+                        android:text="0 lx"
                         android:textSize="20sp"
                         app:layout_constraintBottom_toTopOf="@+id/settings_night_main_disableable_brightness_seekbar"
                         app:layout_constraintEnd_toEndOf="parent"
