--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -45,7 +45,7 @@
                     android:id="@+id/settings_frag_appearance_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/menu_brightness"
+                    android:text="@string/settings_brightness"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_appearance_description"
@@ -57,7 +57,7 @@
                     android:id="@+id/settings_frag_appearance_description"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/desc_brightness"
+                    android:text="@string/settings_brightness_desc"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
                     android:id="@+id/settings_frag_performance_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/menu_performance"
+                    android:text="@string/settings_performance"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_performance_description"
@@ -107,7 +107,7 @@
                     android:id="@+id/settings_frag_performance_description"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/desc_performance"
+                    android:text="@string/settings_performance_desc"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -145,7 +145,7 @@
                     android:id="@+id/settings_frag_sensitivity_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/menu_sensitivity"
+                    android:text="@string/settings_sensitivity"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_sensitivity_description"
@@ -157,7 +157,7 @@
                     android:id="@+id/settings_frag_sensitivity_description"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/desc_sensitivity"
+                    android:text="@string/settings_sensitivity_desc"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -195,7 +195,7 @@
                     android:id="@+id/settings_frag_timeout_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/menu_timeout"
+                    android:text="@string/settings_timeout"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_timeout_description"
@@ -207,7 +207,7 @@
                     android:id="@+id/settings_frag_timeout_description"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/desc_timeout"
+                    android:text="@string/settings_timeout_desc"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -245,7 +245,7 @@
                     android:id="@+id/settings_frag_night_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/menu_night"
+                    android:text="@string/settings_night"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_night_description"
@@ -257,7 +257,7 @@
                     android:id="@+id/settings_frag_night_description"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/desc_night"
+                    android:text="@string/settings_night_desc"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
