--- a/app/src/main/res/layout/fragment_settings_performance_card.xml
+++ b/app/src/main/res/layout/fragment_settings_performance_card.xml
@@ -46,7 +46,7 @@
         android:layout_marginEnd="48dp"
         android:layout_marginRight="48dp"
         android:gravity="center"
-        android:text="@string/menu_performance"
+        android:text="@string/settings_performance"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
