--- a/app/src/main/res/layout/fragment_settings_sensitivity_card.xml
+++ b/app/src/main/res/layout/fragment_settings_sensitivity_card.xml
@@ -23,7 +23,7 @@
             android:layout_marginLeft="48dp"
             android:layout_marginEnd="48dp"
             android:layout_marginRight="48dp"
-            android:text="@string/menu_sensitivity"
+            android:text="@string/settings_sensitivity"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
