--- a/app/src/main/res/layout/fragment_settings_timeout_main.xml
+++ b/app/src/main/res/layout/fragment_settings_timeout_main.xml
@@ -43,7 +43,7 @@
             android:id="@+id/settings_timeout_main_scroll_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/settings_timeout_main_picker_container"
@@ -65,6 +65,7 @@
                         android:id="@+id/settings_timeout_main_picker_hour"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:focusable="false"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -83,6 +84,7 @@
                         android:id="@+id/settings_timeout_main_picker_minute"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:focusable="false"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/settings_timeout_main_text_minute"
                         app:layout_constraintStart_toEndOf="@+id/settings_timeout_main_text_hour"
@@ -102,6 +104,7 @@
                         android:id="@+id/settings_timeout_main_picker_second"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:focusable="false"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/settings_timeout_main_text_second"
                         app:layout_constraintStart_toEndOf="@+id/settings_timeout_main_text_minute"
