--- a/app/src/main/res/layout/fragment_settings_timeout_main.xml
+++ b/app/src/main/res/layout/fragment_settings_timeout_main.xml
@@ -74,7 +74,7 @@
                         android:id="@+id/settings_timeout_main_text_hour"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="h"
+                        android:text="@string/settings_timeout_picker_hour"
                         app:layout_constraintBottom_toBottomOf="@+id/settings_timeout_main_picker_hour"
                         app:layout_constraintEnd_toStartOf="@+id/settings_timeout_main_picker_minute"
                         app:layout_constraintStart_toEndOf="@+id/settings_timeout_main_picker_hour"
@@ -94,7 +94,7 @@
                         android:id="@+id/settings_timeout_main_text_minute"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="m"
+                        android:text="@string/settings_timeout_picker_minute"
                         app:layout_constraintBottom_toBottomOf="@+id/settings_timeout_main_picker_minute"
                         app:layout_constraintEnd_toStartOf="@+id/settings_timeout_main_picker_second"
                         app:layout_constraintStart_toEndOf="@+id/settings_timeout_main_picker_minute"
@@ -114,7 +114,7 @@
                         android:id="@+id/settings_timeout_main_text_second"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="s"
+                        android:text="@string/settings_timeout_picker_second"
                         app:layout_constraintBottom_toBottomOf="@+id/settings_timeout_main_picker_second"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/settings_timeout_main_picker_second"
