--- a/app/src/main/res/layout/fragment_settings_performance_main.xml
+++ b/app/src/main/res/layout/fragment_settings_performance_main.xml
@@ -19,7 +19,7 @@
             android:id="@+id/settings_performance_main_tab_image_quality"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Image quality" />
+            android:text="@string/settings_performance_image_quality" />
 
     </com.google.android.material.tabs.TabLayout>
 
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:layout_marginLeft="12dp"
-                    android:text="Quality level"
+                    android:text="@string/settings_performance_quality_level"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_performance_main_image_quality_seekbar"
                     app:layout_constraintEnd_toStartOf="@+id/settings_performance_main_image_quality_value"
@@ -87,7 +87,7 @@
                     android:layout_marginLeft="12dp"
                     android:layout_marginEnd="12dp"
                     android:layout_marginRight="12dp"
-                    android:text="Adjust and check the result in the card. \nTrun higher for more resolution, or turn lower for more stability."
+                    android:text="@string/settings_performance_image_quality_level_hint"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
